# weather-platform

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.airflow  docker-compose.yml  main.py  pyproject.toml
config/: airflow.cfg
dags/: weather_dag.py
db/: init.sql
src/weather_platform/: config.py  db.py  ingestion.py
