[project]
name = "weather-platform"
version = "0.1.0"
description = "Project that covers Data Engineering concepts and tools used applied to an example field such as weather data storing."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
]


[build-system]
requires = ["uv_build>=0.11.28,<0.12"]
build-backend = "uv_build"


[tool.uv.build-backend]
module-root = "src"

[dependency-groups]
dev = [
    "apache-airflow>=3.3.0",
]
